@@ -56,7 +56,7 @@ import javax.sql.DataSource;
                         .requestMatchers(HttpMethod.GET, "/", "/home", "/register", "/css/**", "/images/**").permitAll()
                         // chiunque (autenticato o no) può mandare richieste POST al punto di accesso per login e register 
                         .requestMatchers(HttpMethod.POST, "/register", "/login").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/reservation").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/reservation", "/user/allReservation").authenticated()
                         .requestMatchers(HttpMethod.POST, "/reservation").authenticated()
                         .requestMatchers(HttpMethod.GET).hasAnyAuthority(ADMIN_ROLE)
                         .requestMatchers(HttpMethod.POST).hasAnyAuthority(ADMIN_ROLE)
