@@ -54,7 +54,7 @@
 							</div>
 						</article>
 					</a>
-					<a th:href="@{/user/allPrenotazioni}" class="tile is-parent">
+					<a th:href="@{/user/allReservation}" class="tile is-parent">
 						<article class="tile is-danger is-child box">
 							<div class="level is-mobile">
 								<div class="level-left">
